# ClaimPilotAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py
app/agents/: state.py  workflow.py
app/db/: init_db.py  models.py  session.py
app/evaluation/: runner.py
app/models/: claims.py
app/services/: analysis.py  claim_repository.py  classifier.py  llm.py  policy_retriever.py  reporting.py
data/policies/: car_policy.md  home_policy.md  travel_policy.md
data/test_cases/: car_collision.json  car_outside_policy.json  car_theft.json  home_burglary.json  home_water_leak.json  home_wear_and_tear.json  travel_baggage_delay.json  travel_medical_high_amount.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
tests/: conftest.py  test_api.py  test_evaluation.py  test_services.py
